--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-social-login-buttons": "^4.1.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
