--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-social-login-buttons": "^4.1.0",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
