--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
